applications/herd-scheduler/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: herd-scheduler
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
