applications/herd-scheduler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: herd-scheduler
  namespace: herd-scheduler
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: herd-scheduler
